[package]
name = "rip8"
version = "0.1.0"
edition = "2021"
authors = ["TornaxO7 <tornax07@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
memmap2 = "0.5.6"
clap = { version =  "3.2.16", features = ["cargo"] }

[dependencies.iced-x86]
version = "1.17.0"
default-features = false
features = ["encoder", "code_asm", "std"]
